# llm-accounting

./: .clineignore  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  current_flake8_output.txt  custom_test_db.sqlite  explicit_config_flake8_output.txt  file::memory:  file:memdb_test_rolling_limits  final_substantive_fixes_flake8_report.txt  flake8_output.txt  focused_flake8_output.txt  full_flake8_output.txt  latest_flake8_report.txt  pyproject.toml  pytest.ini  pytest_csv_audit_refactor_report.txt  pytest_csv_refactor_report.txt  pytest_final_full_report.txt  pytest_final_verification_run.txt  pytest_mock_limit_manager_refactor_report.txt  pytest_postgres_initialize_refactor_report.txt  pytest_refactor_2_report.txt  pytest_refactor_3_report.txt  pytest_refactor_evaluate_limits_report.txt  pytest_refactor_fix_report.txt  pytest_refactor_report.txt  pytest_select_refactor_fix_report.txt  pytest_select_refactor_report.txt  pytest_sqlite_conn_refactor_ondisk_report.txt  pytest_sqlite_conn_refactor_report.txt  pytest_stats_refactor_report.txt  requirements.txt  test_results.txt  tox.ini  update_changelog.py
.clinerules/workflows/: context.md  fix.md  make-modular.md
.github/.workflows/: check-windows-filenames.yml
.github/workflows/: check-windows-filenames.yml  check-windows-filenames2.yml
dev/docs/: feat_key_encryption_plan.md
docs/: PRERELEASE-REVIEW.md  STRUCTURE.md  flake8_output.txt
tests/: conftest.py  test_audit_log.py  test_dual_backend.py  test_migrations.py  test_migrations_postgresql.py  test_migrations_sqlite.py  test_packaging.py
(+133 files in other folders)
